--- a/css/styles.css
+++ b/css/styles.css
@@ -197,10 +197,11 @@ button:active,
   height: auto;
 }
 
-/* Profile Index Page */
-#about {
+/* Home */
+#home {
   height: 100%;
 }
+
 .profile {
   max-width: 80%;
   margin: 10vh auto;
@@ -235,6 +236,91 @@ button:active,
   margin-right: 5px;
   float: right;
 }
+
+
+/* Toolbelt */
+@keyframes toolbelt {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+.toolbelt {
+  margin:  20vh auto;
+  max-width: 75%;
+  overflow: hidden;
+  white-space: nowrap;
+  position: relative;
+}
+
+.toolbelt h1 {
+  text-align: center;
+  padding: 10px;
+}
+
+.toolbelt:before,
+.toolbelt:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  width: 250px;
+  height: 100%;
+  z-index: 2;
+}
+
+.toolbelt:before {
+  left: 0;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0), #ffffff);
+}
+
+.toolbelt:after {
+  right: 0;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), #ffffff);
+}
+
+.toolbelt:hover .toolbelt__logos {
+  animation-play-state: paused;
+}
+
+.toolbelt__logos {
+  display: inline-block;
+  padding: 30px 0;
+  animation: 25s toolbelt infinite linear;
+}
+
+.toolbelt__logos img {
+  height: 60px;
+  margin: 0 30px;
+}
+
+
+/* About me */
+#about {
+  height: 100%;
+}
+
+.about {
+  max-width: 75%;
+  margin:  20vh auto;
+}
+
+.about h1 {
+  text-align: center;
+  padding: 10px;
+}
+
+.about__item {
+  max-width: 80%;
+  margin: 10vh auto;
+  background-color: rgba(168, 152, 152, 0.09);
+  border-radius: 15px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  padding: 25px;
+}
+
 
 /* Work Page */
 #work {
@@ -355,58 +441,6 @@ button:active,
   border-radius: 50%;
   opacity: 1;
 }
-
-/* Toolbelt */
-@keyframes toolbelt {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-100%);
-  }
-}
-.toolbelt {
-  margin:  20vh auto;
-  overflow: hidden;
-  white-space: nowrap;
-  position: relative;
-}
-
-.toolbelt:before,
-.toolbelt:after {
-  position: absolute;
-  content: "";
-  top: 0;
-  width: 250px;
-  height: 100%;
-  z-index: 2;
-}
-
-.toolbelt:before {
-  left: 0;
-  background: linear-gradient(to left, rgba(255, 255, 255, 0), #ffffff);
-}
-
-.toolbelt:after {
-  right: 0;
-  background: linear-gradient(to right, rgba(255, 255, 255, 0), #ffffff);
-}
-
-.toolbelt:hover .toolbelt__logos {
-  animation-play-state: paused;
-}
-
-.toolbelt__logos {
-  display: inline-block;
-  padding: 30px 0;
-  animation: 25s toolbelt infinite linear;
-}
-
-.toolbelt__logos img {
-  height: 60px;
-  margin: 0 30px;
-}
-
 
 /* Contact Page */
 #contact {
