--- a/css/styles.css
+++ b/css/styles.css
@@ -215,7 +215,7 @@ button:active,
 
 .profile__portrait {
   width: 450px;
-  margin-right: 50px;
+  margin: 0 50px;
   padding: 10px;
   border-radius: 20px;
   object-fit: cover;
@@ -224,6 +224,7 @@ button:active,
 .profile__text {
   flex: 1 1 100px;
   padding: 15px;
+  margin-right: 50px;
 }
 
 .profile__text h1 {
@@ -233,7 +234,7 @@ button:active,
 
 .profile .button {
   margin-top: 15%;
-  margin-right: 5px;
+  margin-right: 50px;
   float: right;
 }
 
@@ -321,6 +322,27 @@ button:active,
   padding: 25px;
 }
 
+.about__item h2 {
+  padding: 10px;
+  margin: 5px;
+}
+
+.about__item-content {
+  display: flex;
+}
+
+.about__item-content img {
+  width: 35%;
+  border-radius: 20px;
+  padding: 10px;
+  margin: 5px;
+}
+
+.about__item-content p {
+  padding: 10px;
+  margin: 5px;
+}
+
 
 /* Work Page */
 #work {
@@ -381,7 +403,7 @@ button:active,
 }
 
 .project-list__item p {
-  min-height: 120px;
+  min-height: 150px;
 }
 
 .project-list__item .button {
@@ -429,10 +451,27 @@ button:active,
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
+@keyframes pulse {
+  0% {
+    transform: scale(0.9);
+  }
+  70% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.9);
+  }
+}
+
 .open-modal {
   margin-right: 20px;
   margin-bottom: 20px;
   float: right;
+  animation: pulse 1.7s infinite;
+}
+
+.open-modal:hover {
+  animation: none;
 }
 
 .open-modal img,
@@ -548,6 +587,15 @@ svg:hover {
 }
 
 @media all and (max-width: 750px) {
+  .profile__text .button {
+    width: 100%;
+    margin-top: 10%;
+    margin-right: 10px;
+    margin-left: 10px;
+    float:none;
+    text-align: center;
+  }
+
   .project-list {
     grid-gap: 15px;
     grid-template-columns: 1fr;
@@ -566,7 +614,7 @@ svg:hover {
   }
 }
 
-@media all and (max-width: 1000px) {
+@media all and (max-width: 1300px) {
   .profile {
     flex-wrap: wrap;
     justify-content: center;
@@ -579,7 +627,6 @@ svg:hover {
     width: 450px;
     margin-right: 50px;
     padding: 10px;
-    object-fit: cover;
   }
 
   .profile__text {
@@ -590,14 +637,5 @@ svg:hover {
 @media all and (min-width: 750px) and (max-width: 1300px) {
   .project-list {
     grid-template-columns: 1fr 1fr;
-  }
-}
-
-@media all and (min-width: 1000px) and (max-width: 1300px) {
-  .profile__portrait {
-    max-width: 350px;
-    margin-right: 25px;
-    padding: 5px;
-    object-fit: contain;
   }
 }
