--- a/css/styles.css
+++ b/css/styles.css
@@ -315,7 +315,7 @@ button:active,
 }
 
 .about__item {
-  max-width: 80%;
+  max-width: 100%;
   margin: 10vh auto;
   background-color: rgba(168, 152, 152, 0.09);
   border-radius: 15px;
@@ -409,7 +409,7 @@ button:active,
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
-.project-list__item p {
+.project-description {
   min-height: 150px;
 }
 
@@ -655,10 +655,6 @@ svg:hover {
     margin: 0 15px;
   }
 
-  .about__item {
-    max-width: 100%;
-  }
-
   h2 {
     font-size: 20px;
   }
@@ -719,10 +715,6 @@ svg:hover {
 /* For 750px - 1350px */
 /* Sections: About, Project List, Button */
 @media all and (min-width: 750px) and (max-width: 1350px) {
-  .about__item {
-    max-width: 100%;
-  }
-
   .about__item-content {
     display: inline-block;
   }
@@ -766,7 +758,7 @@ svg:hover {
     font-size: 35px;
   }
 
-  .project-list__item p {
+  .project-description {
     min-height: 180px;
   }
 }
